css/main.css
/* ... */
@media (min-width: 80rem) {
  .sideNavC {
    display: none;
  }
}

/* MAIN */
.main {
  background-color: #fff085;
  padding-block: 144px 64px;
  display: flex;
  align-items: center;

  .mainLeft {
    position: absolute;
    top: 40px;
    left: 40px;
    width: 128px;
    height: 128px;
    background-color: rgb(0, 0, 0, 0.1);
    rotate: 12deg;
  }
  .mainRight {
    position: absolute;
    top: 160px;
    right: 80px;
    width: 96px;
    height: 96px;
    background-color: rgb(251, 44, 54, 0.1);
    rotate: -45deg;
  }
  .mainBottom {
    position: absolute;
    bottom: 80px;
    left: 33.3333%;
    width: 112px;
    height: 112px;
    background-color: rgb(43, 127, 255, 0.1);
    rotate: 45deg;
    z-index: 1;
  }

  .container {
    padding-inline: 32px;
  }

  .mainContent {
    display: grid;
    gap: 64px;
    align-items: center;
    grid-template-columns: repeat(1, minmax(0, 1fr));

    .main_LeftC {
      .mainLabel {
        display: inline-block;
        background-color: black;
        color: white;
        line-height: 25px;
        padding: 8px 16px;
        margin-bottom: 24px;
        rotate: -2deg;
      }

      h2 {
        font-size: 4.5rem;
        line-height: 5.625rem;
        color: black;
        text-shadow: 3px 3px black;
        margin-bottom: 2rem;

        .redH2 {
          color: #e7000b;
        }
        .blueH2 {
          color: #155dfc;
        }
      }

      .mainP {
        padding: 16px;
        background-color: white;
        font-weight: 500;
        margin-bottom: 32px;
        position: relative;
        z-index: 2;
      }

      .mainBtns {
        display: flex;
        align-items: center;
        gap: 16px;
        position: relative;
        z-index: 2;

        .mainBtnOuter {
          position: relative;

          &::before {
            content: "";
            position: absolute;
            background-color: black;
            width: 100%;
            height: 100%;
            top: 6px;
            left: 6px;
            z-index: -10;
          }
        }
        button {
          display: flex;
          align-items: center;
          gap: 8px;
          padding: 16px 32px;
          border: 4px solid black;
          transition: 0.2s;

          &:hover {
            transform: translateX(6px) translateY(6px);
          }
        }
        .startBtn {
          background-color: black;
          color: white;
        }
      }
    }

    .main_Right {
      position: relative;

      .rightImageLabel {
        background-color: #fb2c36;
        color: white;
        line-height: 24px;
        padding: 8px 16px;
        position: absolute;
        z-index: 5;
        top: -16px;
        right: -16px;
        rotate: 12deg;
      }

      .mainImageOuter {
        border: 4px solid black;
        box-shadow: 6px 6px black;
        height: calc(0.25rem * 96);
        transition: 0.3s;

        &:hover {
          transform: translate(-2px, -2px);
        }

        img {
          object-fit: cover;
        }
      }
    }
  }
  @media (min-width: 64rem) {
    .mainContent {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
    .mainImageOuter {
      rotate: 2deg;
    }
  }
}
/* ... */

